--- a/NotifyMoment.Android/NotifyMoment.Android.csproj
+++ b/NotifyMoment.Android/NotifyMoment.Android.csproj
@@ -101,5 +101,11 @@
       <Name>NotifyMoment</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-xxhdpi\IconX.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\iconos\IconM.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
