--- a/NotifyMoment.Android/Properties/AndroidManifest.xml
+++ b/NotifyMoment.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.NotifyPushApp.notifymoment" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
-	<application android:label="NotifyMoment.Android" android:theme="@style/MainTheme">
+	<application android:label="APL" android:theme="@style/MainTheme">
 		
 <receiver
     android:name="com.google.firebase.iid.FirebaseInstanceIdInternalReceiver"
@@ -13,13 +13,10 @@
     <intent-filter>
         <action android:name="com.google.android.c2dm.intent.RECEIVE" />
         <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+		<action android:name="com.google.firebase.MESSAGING_EVENT" />
         <category android:name="${applicationId}" />
     </intent-filter>
 </receiver>
-		
-	<meta-data
-    android:name="com.google.firebase.messaging.default_notification_icon"
-    android:resource="@android:drawable/ic_menu_save    " />
 	
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
